<resources>
    <string name="app_name">First</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="not_registered_yet_create_account">Not registered yet? Create account</string>
    <string name="register">Register</string>
    <string name="e_mail">e-mail</string>
    <string name="birth_date">Birth Date</string>
    <string name="full_name">Full name</string>
    <string name="settings">Settings</string>
    <string name="title_activity_main_bn">MainBn</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>