<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".SignUp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txf_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txf_pswd"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:autofillHints="Username"
            android:hint="@string/username"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txf_pswd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txf_fullName"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toBottomOf="@id/txf_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txf_fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txf_email"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toBottomOf="@id/txf_pswd">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:autofillHints="FullName"
            android:hint="@string/full_name"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/txf_birthdate"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toBottomOf="@id/txf_fullName">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:autofillHints="emailAddress"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txf_birthdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineR"
        app:layout_constraintStart_toStartOf="@id/guidelineL"
        app:layout_constraintTop_toBottomOf="@id/txf_email"
        android:layout_marginBottom="200dp"
        android:onClick="showDatePicker">

        <EditText
            android:id="@+id/et_birthdate"
            android:focusable="false"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8"
            android:autofillHints="birthDate"
            android:hint="@string/birth_date"
            android:inputType="date"
            tools:ignore="SpeakableTextPresentCheck">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineR"
        app:layout_constraintStart_toStartOf="@+id/guidelineL"
        app:layout_constraintTop_toBottomOf="@+id/txf_birthdate"
        android:layout_marginBottom="50dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>